# lyra

./: Cargo.toml  Dockerfile  README.md  flake.nix
book/: book.toml
book/src/: SUMMARY.md  introduction.md
book/src/reducers/: README.md  builtin.md  deno.md
examples/builtin-redis/: daemon.toml  docker-compose.yaml
examples/deno-postgres/: README.md  daemon.toml  docker-compose.yml  reduce.js  schema.sql
examples/deno-redis/: docker-compose.yaml
src/: lib.rs
src/crosscut/: args.rs  time.rs
src/enrich/: mod.rs  skip.rs  sled.rs
src/framework/: errors.rs  mod.rs  model.rs  policies.rs
src/reducers/: deno.rs  mod.rs  wasm.rs
src/reducers/builtin/: full_utxos_by_address.rs
src/reducers/deno/: mod.rs  runtime.js
src/sources/: cbor.rs  mod.rs  n2c.rs  n2n.rs  u5c.rs  utxorpc.rs
src/state/redb/: mod.rs  v2.rs
src/storage/: mod.rs  none.rs  postgres.rs  redis.rs
