[package]
name = "lyra"
description = "Cardano chain indexer"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/alethea-io/lyra"
homepage = "https://github.com/alethea-io/lyra"
documentation = "https://docs.rs/lyra"
license = "Apache-2.0"
readme = "README.md"
authors = ["Aleksandar Djuric <aleksandardjuric@alethea.io>"]

[dependencies]
async-trait = "0.1.73"
bb8-postgres = "0.8.1"
bech32 = "0.9.1"
clap = { version = "3.2.6", features = ["derive"] }
config = { version = "0.13.0", default-features = false, features = [
    "toml",
    "json",
] }
deno_runtime = { version = "0.126.0" }
env_logger = "0.10.1"
futures = { version = "0.3.24" }
gasket = { version = "0.6.0", features = ["derive"] }
hex = "0.4.3"
indicatif = { version = "0.17.0-rc.11" }
lazy_static = "1.4.0"
log = "0.4.14"
merge = "0.1.0"
net2 = "0.2.37"
openssl = { version = "0.10", features = ["vendored"] }
pallas = "0.19.0"
prometheus_exporter = { version = "0.8.4", default-features = false }
r2d2_redis = "0.14.0"
rayon = "1.5.3"
sled = "0.34.7"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
thiserror = "1.0.30"
tokio = { version = "1.35.1" }
tonic = { version = "0.9.2", features = ["tls", "tls-roots"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
utxorpc = { version = "1.0.0-alpha.1" }
