[package]
name = "lyra"
description = "Indexing engine for the Cardano blockchain"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/alethea-io/lyra"
homepage = "https://github.com/alethea-io/lyra"
documentation = "https://docs.rs/lyra"
license = "Apache-2.0"
readme = "README.md"
authors = ["Aleksandar Djuric <aleksandardjuric@alethea.io>"]

[dependencies]
async-trait = "0.1.73"
bb8-postgres = "0.8.1"
clap = { version = "4.5.11", features = ["derive"] }
config = { version = "0.14.0", default-features = false, features = [
    "toml",
    "json",
] }
deno_runtime = { version = "0.126.0" }
extism = "1.4.1"
futures = { version = "0.3.24" }
gasket = { version = "0.8.0", features = ["derive"] }
hex = "0.4.3"
indicatif = { version = "0.17.0-rc.11" }
lazy_static = "1.4.0"
pallas = "0.29.0"
r2d2_redis = "0.14.0"
rayon = "1.5.3"
sled = "0.34.7"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
thiserror = "1.0.30"
tokio = { version = "1.35.1" }
tonic = { version = "0.11.0", features = ["tls", "tls-roots"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
utxorpc-spec = { version = "0.8.0" }
